[package]
name = "lrpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "3.0.0"
colored = "2.1.0"
comfy-table = "7.1.1"
dirs = "5.0.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.201", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.117", features = ["indexmap", "preserve_order", "alloc", "arbitrary_precision", "float_roundtrip", "raw_value", "unbounded_depth"] }
termimad = "0.29.2"
